--- a/LinkedList.vcxproj
+++ b/LinkedList.vcxproj
@@ -124,9 +124,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="LinkedList.cpp" />
+    <ClCompile Include="Person.cpp" />
     <ClCompile Include="String.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Person.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="String.h" />
   </ItemGroup>
